--- a/style_aligned_sdxl.ipynb
+++ b/style_aligned_sdxl.ipynb
@@ -3,24 +3,17 @@
   {
    "cell_type": "markdown",
    "id": "a885cf5d-c525-4f5b-a8e4-f67d2f699909",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Copyright 2023 Google LLC"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "d891d022-8979-40d4-848f-ecb84c17f12c",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "jp-MarkdownHeadingCollapsed": true
    },
    "outputs": [],
    "source": [
@@ -42,48 +35,33 @@
   {
    "cell_type": "markdown",
    "id": "540d8642-c203-471c-a66d-0d43aabb0706",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "# StyleAligned over SDXL"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "23d54ea7-f7ab-4548-9b10-ece87216dc18",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from diffusers import StableDiffusionXLPipeline, DDIMScheduler\n",
     "import torch\n",
     "import mediapy\n",
-    "import sa_handler\n",
-    "\n",
-    "\n",
-    "# from sa_utils import files_utils\n",
-    "# import ff_utils as utils\n",
-    "device = torch.device('cuda:0')"
+    "import sa_handler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c2f6f1e6-445f-47bc-b9db-0301caeb7490",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "# init models\n",
+    "\n",
     "scheduler = DDIMScheduler(beta_start=0.00085, beta_end=0.012, beta_schedule=\"scaled_linear\", clip_sample=False,\n",
     "                              set_alpha_to_one=False)\n",
     "pipeline = StableDiffusionXLPipeline.from_pretrained(\n",
@@ -107,13 +85,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5cca9256-0ce0-45c3-9cba-68c7eff1452f",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "# run StyleAligned\n",
+    "\n",
     "sets_of_prompts = [\n",
     "  \"a toy train. macro photo. 3d game asset\",\n",
     "  \"a toy airplane. macro photo. 3d game asset\",\n",
@@ -129,11 +105,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d819ad6d-0c19-411f-ba97-199909f64805",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
