--- a/style_aligned_sdxl.ipynb
+++ b/style_aligned_sdxl.ipynb
@@ -57,7 +57,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c2f6f1e6-445f-47bc-b9db-0301caeb7490",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# init models\n",
@@ -70,8 +74,8 @@
     ").to(\"cuda\")\n",
     "\n",
     "handler = sa_handler.Handler(pipeline)\n",
-    "sa_args = sa_handler.StyleAlignedArgs(share_group_norm=True,\n",
-    "                                      share_layer_norm=True,\n",
+    "sa_args = sa_handler.StyleAlignedArgs(share_group_norm=False,\n",
+    "                                      share_layer_norm=False,\n",
     "                                      share_attention=True,\n",
     "                                      adain_queries=True,\n",
     "                                      adain_keys=True,\n",
@@ -85,16 +89,20 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5cca9256-0ce0-45c3-9cba-68c7eff1452f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# run StyleAligned\n",
-    "\n",
     "sets_of_prompts = [\n",
     "  \"a toy train. macro photo. 3d game asset\",\n",
     "  \"a toy airplane. macro photo. 3d game asset\",\n",
     "  \"a toy bicycle. macro photo. 3d game asset\",\n",
     "  \"a toy car. macro photo. 3d game asset\",\n",
+    "    \"a toy boat. macro photo. 3d game asset\",\n",
     "] \n",
     "g_cuda = torch.Generator(device='cuda')\n",
     "images = pipeline(sets_of_prompts,).images\n",
