--- a/style_aligned_w_controlnet.ipynb
+++ b/style_aligned_w_controlnet.ipynb
@@ -83,8 +83,8 @@
     ").to(\"cuda\")\n",
     "pipeline.enable_model_cpu_offload()\n",
     "\n",
-    "sa_args = sa_handler.StyleAlignedArgs(share_group_norm=True,\n",
-    "                                      share_layer_norm=True,\n",
+    "sa_args = sa_handler.StyleAlignedArgs(share_group_norm=False,\n",
+    "                                      share_layer_norm=False,\n",
     "                                      share_attention=True,\n",
     "                                      adain_queries=True,\n",
     "                                      adain_keys=True,\n",
@@ -101,11 +101,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get depth map\n",
+    "# get depth maps\n",
     "\n",
     "image = load_image(\"./example_image/train.png\")\n",
-    "depth_image = pipeline_calls.get_depth_map(image, feature_processor, depth_estimator)\n",
-    "mediapy.show_images([image, depth_image])"
+    "depth_image1 = pipeline_calls.get_depth_map(image, feature_processor, depth_estimator)\n",
+    "depth_image2 = load_image(\"./example_image/sun.png\").resize((1024, 1024))\n",
+    "mediapy.show_images([depth_image1, depth_image2])"
    ]
   },
   {
@@ -117,15 +118,21 @@
    "source": [
     "# run ControlNet depth with StyleAligned\n",
     "\n",
-    "prompts = [\"a poster in flat design style\", \"a train in flat design style\"]\n",
+    "reference_prompt = \"a poster in flat design style\"\n",
+    "target_prompts = [\"a train in flat design style\", \"the sun in flat design style\"]\n",
     "controlnet_conditioning_scale = 0.8\n",
-    "images = pipeline_calls.controlnet_call(pipeline, prompts,\n",
-    "                                        image=depth_image,\n",
-    "                                        num_inference_steps=50,\n",
-    "                                        controlnet_conditioning_scale=controlnet_conditioning_scale,\n",
-    "                                        num_images_per_prompt=3)\n",
-    "\n",
-    "mediapy.show_images([images[0], depth_image] +  images[1:], titles=[\"reference\", \"depth\"] + [f'result {i}' for i in range(1, len(images))])\n"
+    "num_images_per_prompt = 3 # adjust according to VRAM size\n",
+    "# latents = torch.randn(1 + num_images_per_prompt, 4, 128, 128).to(pipeline.unet.dtype)\n",
+    "latents[1:] = torch.randn(num_images_per_prompt, 4, 128, 128).to(pipeline.unet.dtype)\n",
+    "for deph_map, target_prompt in zip((depth_image1, depth_image2), target_prompts):\n",
+    "    images = pipeline_calls.controlnet_call(pipeline, [reference_prompt, target_prompt],\n",
+    "                                            image=deph_map,\n",
+    "                                            num_inference_steps=50,\n",
+    "                                            controlnet_conditioning_scale=controlnet_conditioning_scale,\n",
+    "                                            num_images_per_prompt=num_images_per_prompt,\n",
+    "                                           latents=latents)\n",
+    "    \n",
+    "    mediapy.show_images([images[0], deph_map] +  images[1:], titles=[\"reference\", \"depth\"] + [f'result {i}' for i in range(1, len(images))])\n"
    ]
   },
   {
