--- a/style_aligned_w_controlnet.ipynb
+++ b/style_aligned_w_controlnet.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "f86ede39-8d9f-4da9-bc12-955f2fddd484",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Copyright 2023 Google LLC"
    ]
@@ -12,7 +16,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3f3cbf47-a52b-48b1-9bd3-3435f92f2174",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Copyright 2023 Google LLC\n",
@@ -33,7 +41,11 @@
   {
    "cell_type": "markdown",
    "id": "22de629b-581f-4335-9e7b-f73221d8dbcb",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# ControlNet depth with StyleAligned over SDXL"
    ]
@@ -42,7 +54,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "486b7ebb-c483-4bf0-ace8-f8092c2d1f23",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from diffusers import ControlNetModel, StableDiffusionXLControlNetPipeline, AutoencoderKL\n",
@@ -58,7 +74,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2a7e85e7-b5cf-45b2-946a-5ba1e4923586",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# init models\n",
@@ -98,7 +118,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "94ca26b4-9061-4012-9400-8d97ef212d87",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# get depth maps\n",
@@ -113,7 +137,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c8f56fe4-559f-49ff-a2d8-460dcfeb56a0",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# run ControlNet depth with StyleAligned\n",
@@ -122,9 +150,9 @@
     "target_prompts = [\"a train in flat design style\", \"the sun in flat design style\"]\n",
     "controlnet_conditioning_scale = 0.8\n",
     "num_images_per_prompt = 3 # adjust according to VRAM size\n",
-    "# latents = torch.randn(1 + num_images_per_prompt, 4, 128, 128).to(pipeline.unet.dtype)\n",
-    "latents[1:] = torch.randn(num_images_per_prompt, 4, 128, 128).to(pipeline.unet.dtype)\n",
+    "latents = torch.randn(1 + num_images_per_prompt, 4, 128, 128).to(pipeline.unet.dtype)\n",
     "for deph_map, target_prompt in zip((depth_image1, depth_image2), target_prompts):\n",
+    "    latents[1:] = torch.randn(num_images_per_prompt, 4, 128, 128).to(pipeline.unet.dtype)\n",
     "    images = pipeline_calls.controlnet_call(pipeline, [reference_prompt, target_prompt],\n",
     "                                            image=deph_map,\n",
     "                                            num_inference_steps=50,\n",
@@ -139,7 +167,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "437ba4bd-6243-486b-8ba5-3b7cd661d53a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
