--- a/style_aligned_w_multidiffusion.ipynb
+++ b/style_aligned_w_multidiffusion.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "50fa980f-1bae-40c1-a1f3-f5f89bef60d3",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Copyright 2023 Google LLC"
    ]
@@ -12,7 +16,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5da5f038-057f-4475-a783-95660f98238c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Copyright 2023 Google LLC\n",
@@ -33,7 +41,11 @@
   {
    "cell_type": "markdown",
    "id": "c3a7c069-c441-4204-a905-59cbd9edc13a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# MultiDiffusion with StyleAligned over SD v2"
    ]
@@ -42,7 +54,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "14178de7-d4c8-4881-ac1d-ff84bae57c6f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -56,7 +72,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "738cee0e-4d6e-4875-b4df-eadff6e27e7f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# init models\n",
@@ -81,9 +101,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ea61e789-2814-4820-8ae7-234c3c6640a0",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
+    "# run MultiDiffusion with StyleAligned\n",
+    "\n",
     "reference_prompt = \"a beautiful papercut art design\"\n",
     "target_prompts = [\"mountains in a beautiful papercut art design\", \"giraffes in a beautiful papercut art design\"]\n",
     "view_batch_size = 25  # adjust according to VRAM size\n",
@@ -97,7 +123,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "791a9b28-f0ce-4fd0-9f3c-594281c2ae56",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
