--- a/style_aligned_transfer_sdxl.ipynb
+++ b/style_aligned_transfer_sdxl.ipynb
@@ -48,6 +48,24 @@
     "#### Model Load "
    ]
   },
+
+
+{
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/google/style-aligned",
+ 	  "%cd style-aligned/",
+    "!pip install -r requirements.txt",
+    "\n",
+    "\n",
+
+   ]
+  },
+
   {
    "cell_type": "code",
    "execution_count": null,
